@@ -1,3 +1,7 @@
+2007-02-03  Stefan Jahn  <stefan@lkcc.org>
+
+	* nasolver.cpp: Fixing probe functionality.
+
 2007-01-30  Stefan Jahn  <stefan@lkcc.org>
 
 	* ucs.cpp (main): Updated copyright notice.
